--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "qrcode-lite",
-	"version": "0.1",
+	"name": "qrcode-chrome",
+	"version": "0.1.1",
 	"manifest_version": 2,
-	"homepage_url" : "https://github.com/cxfksword/qrcode-lite-extension" ,
+	"homepage_url" : "https://github.com/cxfksword/qrcode-chrome" ,
 	"description": "QR code generated extension for chrome",
 	"browser_action": {
 		"default_icon": {
